// in models.proto

syntax = "proto3";

package transport;

// Option to generate Go code in a specific package
option go_package = "github.com/your-org/go-secure-messaging/pkg/transport";

// Represents the secure data packet sent between users.
message SecureEnvelope {
  string senderId = 1;
  string recipientId = 2;
  string messageId = 3;
  bytes encryptedSymmetricKey = 4;
  bytes encryptedData = 5;
  bytes signature = 6;
}